--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get To Know Me!</h2>
                     <hr class="light">
-                    <p class="text-faded">My name is Fangfang Fu. I'm a Software Engineer and currently working at a Payment Coporation. I am open to any new oppotunity. I love programming and have done so for almost 2 years. I love working with people to do things bigger than I could accomplish alone.</p>
+                    <p class="text-faded">My name is Fangfang Fu. I'm a Software Engineer who is working at a payment corporation. I love programming and always pursue to learn more technologies.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Skills</a>
                 </div>
             </div>
